crates/etch-core/tests/snapshots/corpus_tests__core-paragraphs-multiple.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "First paragraph."
          }
        ]
      },
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "Second paragraph."
          }
        ]
      },
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "Third paragraph."
          }
        ]
      }
    ]
  },
  "errors": []
}
