crates/etch-core/tests/snapshots/corpus_tests__core-paragraphs-single.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "This is one paragraph on a single line."
          }
        ]
      }
    ]
  },
  "errors": []
}
