crates/etch-core/tests/snapshots/corpus_tests__core-paragraphs-trailing-whitespace.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "This line ends with trailing spaces.  "
          },
          {
            "type": "SoftBreak"
          },
          {
            "type": "Text",
            "value": "This next line also ends with trailing spaces.  "
          },
          {
            "type": "SoftBreak"
          },
          {
            "type": "Text",
            "value": "This line is still part of the same paragraph."
          }
        ]
      }
    ]
  },
  "errors": []
}
