crates/etch-core/tests/snapshots/corpus_tests__core-tables-basic.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Table",
        "headers": [
          {
            "content": [
              {
                "type": "Text",
                "value": "Trail"
              }
            ]
          },
          {
            "content": [
              {
                "type": "Text",
                "value": "Distance"
              }
            ]
          }
        ],
        "rows": [
          [
            {
              "content": [
                {
                  "type": "Text",
                  "value": "Pine Loop"
                }
              ]
            },
            {
              "content": [
                {
                  "type": "Text",
                  "value": "4 km"
                }
              ]
            }
          ],
          [
            {
              "content": [
                {
                  "type": "Text",
                  "value": "Ridge Walk"
                }
              ]
            },
            {
              "content": [
                {
                  "type": "Text",
                  "value": "7 km"
                }
              ]
            }
          ],
          [
            {
              "content": [
                {
                  "type": "Text",
                  "value": "River Path"
                }
              ]
            },
            {
              "content": [
                {
                  "type": "Text",
                  "value": "3 km"
                }
              ]
            }
          ]
        ],
        "alignments": [
          "None",
          "None"
        ]
      }
    ]
  },
  "errors": []
}
