crates/etch-core/tests/snapshots/corpus_tests__core-tables-many-columns.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Table",
        "headers": [
          {
            "content": [
              {
                "type": "Text",
                "value": "Day"
              }
            ]
          },
          {
            "content": [
              {
                "type": "Text",
                "value": "Weather"
              }
            ]
          },
          {
            "content": [
              {
                "type": "Text",
                "value": "Trail"
              }
            ]
          },
          {
            "content": [
              {
                "type": "Text",
                "value": "Distance"
              }
            ]
          },
          {
            "content": [
              {
                "type": "Text",
                "value": "Notes"
              }
            ]
          }
        ],
        "rows": [
          [
            {
              "content": [
                {
                  "type": "Text",
                  "value": "Monday"
                }
              ]
            },
            {
              "content": [
                {
                  "type": "Text",
                  "value": "Clear"
                }
              ]
            },
            {
              "content": [
                {
                  "type": "Text",
                  "value": "Ridge Walk"
                }
              ]
            },
            {
              "content": [
                {
                  "type": "Text",
                  "value": "7 km"
                }
              ]
            },
            {
              "content": [
                {
                  "type": "Text",
                  "value": "Early start"
                }
              ]
            }
          ],
          [
            {
              "content": [
                {
                  "type": "Text",
                  "value": "Tuesday"
                }
              ]
            },
            {
              "content": [
                {
                  "type": "Text",
                  "value": "Rain"
                }
              ]
            },
            {
              "content": [
                {
                  "type": "Text",
                  "value": "River Path"
                }
              ]
            },
            {
              "content": [
                {
                  "type": "Text",
                  "value": "3 km"
                }
              ]
            },
            {
              "content": [
                {
                  "type": "Text",
                  "value": "Waterproof boots"
                }
              ]
            }
          ]
        ],
        "alignments": [
          "None",
          "None",
          "None",
          "None",
          "None"
        ]
      }
    ]
  },
  "errors": []
}
