crates/etch-core/tests/snapshots/corpus_tests__core-tables-single-column.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Table",
        "headers": [
          {
            "content": [
              {
                "type": "Text",
                "value": "Supplies"
              }
            ]
          }
        ],
        "rows": [
          [
            {
              "content": [
                {
                  "type": "Text",
                  "value": "Rope"
                }
              ]
            }
          ],
          [
            {
              "content": [
                {
                  "type": "Text",
                  "value": "Matches"
                }
              ]
            }
          ],
          [
            {
              "content": [
                {
                  "type": "Text",
                  "value": "Compass"
                }
              ]
            }
          ]
        ],
        "alignments": [
          "None"
        ]
      }
    ]
  },
  "errors": []
}
