crates/etch-core/tests/snapshots/corpus_tests__core-thematic-breaks-all-variants.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "The first journal entry ends here."
          }
        ]
      },
      {
        "type": "ThematicBreak"
      },
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "The second journal entry follows the dash rule."
          }
        ]
      },
      {
        "type": "ThematicBreak"
      },
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "The third journal entry follows the star rule."
          }
        ]
      },
      {
        "type": "ThematicBreak"
      },
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "The fourth journal entry follows the underscore rule."
          }
        ]
      }
    ]
  },
  "errors": []
}
