crates/etch-core/tests/snapshots/corpus_tests__core-thematic-breaks-long-variants.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "The first section ends here."
          }
        ]
      },
      {
        "type": "ThematicBreak"
      },
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "The second section follows a longer dash break."
          }
        ]
      },
      {
        "type": "ThematicBreak"
      },
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "The third section follows a longer star break."
          }
        ]
      },
      {
        "type": "ThematicBreak"
      },
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "The fourth section follows a longer underscore break."
          }
        ]
      }
    ]
  },
  "errors": []
}
